# dynashell

./: .gitignore  README.md  pyproject.toml
doc/: README.md  command.md  command_prompt.md  config.md  config_file.md  dictionary.md  dictionary_objects.md  features.md  history.md  path_prefixes.md  paths.md  prefixes.md  reader.md  script_files.md  script_variables.md  scripts.md  setting.md  settings_object.md  shutdown.md  shutdown_process.md  startup.md  startup_process.md  variables.md
example/: README.md
example/common/module/common/: connect.py
example/common/script/: STARTUP  common_shutdown  common_startup  connect
example/simple/: config.yaml
example/simple/script/: session_shutdown  session_startup  show_config
src/dynashell/: check.py  classes.py  const.py  feature.py  main.py  setting.yaml  utils.py
